--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ opacity: 1;
 
 #centre
 {
+	
 	height: 80%;
 	display: flex;
 	flex-direction: column;
@@ -31,6 +32,7 @@ opacity: 1;
 
 	
 }
+
 
 .champ
 {
@@ -54,7 +56,16 @@ border-style: none;
 
 }
 
+#accueil
 
+{
+	margin-top: 200px;
+	margin-left: 400px; 
+	width: 400px;
+	height: 200px;
+	font-size: 20px;
+
+}
 
 .button2 
 {
